backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    app: backendapp
    sandbox: learn-kubernetes
    learn-kubernetes: backendapp
spec:
  selector:
    matchLabels:
      app: backendapp
  replicas: 1
  template:
    metadata:
      labels:
        app: backendapp
        sandbox: learn-kubernetes
        learn-kubernetes: backendapp
    spec:
      containers:
        - name: backendapp
          image: ghcr.io/x47base/counter-backend:v1
          ports:
           -  containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
          imagePullPolicy: IfNotPresent

      restartPolicy: Always
