backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  type: NodePort
  selector:
    app: backendapp
    sandbox: learn-kubernetes
    learn-kubernetes: backendapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30300
