backend/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backendapp
    sandbox: learn-kubernetes
    learn-kubernetes: backendapp
  name: counter-backend
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: counter-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
